--- a/src/examples/rx-dom/infinite-posts/tiles-list/tiles-list.component.html
+++ b/src/examples/rx-dom/infinite-posts/tiles-list/tiles-list.component.html
@@ -1,7 +1,7 @@
 <div class="tiles-list">
   <div
     class="tile"
-    *for="let tile of $.$tiles$.subscribe"
+    *for="let tile of $.tiles"
   >
     <div
       class="title"
