--- a/src/examples/rx-dom/infinite-posts/tiles-list/tiles-list.component.scss
+++ b/src/examples/rx-dom/infinite-posts/tiles-list/tiles-list.component.scss
@@ -23,8 +23,8 @@
         }
 
         & > iframe {
-          // @include aspect-ratio-mixin(16, 9);
-          aspect-ratio: 16 / 9;
+           @include aspect-ratio-mixin(16, 9);
+          //aspect-ratio: 16 / 9;
         }
       }
     }
