--- a/src/examples/rx-dom/file-transfer/file-transfer.component.html
+++ b/src/examples/rx-dom/file-transfer/file-transfer.component.html
@@ -2,14 +2,14 @@
   <button
     class="button-style"
     (click)="$.onClickStartDownload"
-    [disabled]="eq($.status, of('loading'))"
+    [disabled]="eq($.status$, of('loading'))"
   >
     Start download
   </button>
   <button
     class="button-style"
     (click)="$.onClickCancelDownload"
-    [disabled]="neq($.status, of('loading'))"
+    [disabled]="neq($.status$, of('loading'))"
   >
     Cancel
   </button>
@@ -18,13 +18,13 @@
 <div
   class="status"
 >
-  <rx-switch expression="$.status">
+  <rx-switch expression="$.status$">
     <div
       *switch-case="'loading'"
       class="loading"
     >
       <app-progress-ring
-        [progress]="$.progress"
+        [progress]="$.progress$"
         radius="60"
         stroke="20"
       ></app-progress-ring>
@@ -39,7 +39,7 @@
       *switch-case="'error'"
       class="error"
     >
-      Error: {{ pipe($.error, [map((error) => error.message)]) }}
+      Error: {{ $.errorMessage$ }}
     </div>
   </rx-switch>
 </div>
