--- a/style/main.scss
+++ b/style/main.scss
@@ -26,7 +26,7 @@ body {
   top: 0;
   right: 0;
   overflow: hidden;
-  font-size: 0;
+  //font-size: 0;
   font-family: Hevetica, Arial, sans-serif;
 }
 
