--- a/src/examples/rx-dom/material/form/elements/select/overlay/mat-select-overlay.component.scss
+++ b/src/examples/rx-dom/material/form/elements/select/overlay/mat-select-overlay.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../style/mixins';
+@import '../../../../../../../../style/mixins';
 
 $vertical-padding: 4px;
 $line-height: 18px;
