--- a/src/examples/rx-dom/material/form/components/inputs/select/overlay/mat-select-overlay.component.html
+++ b/src/examples/rx-dom/material/form/components/inputs/select/overlay/mat-select-overlay.component.html
@@ -1,12 +1,9 @@
 <div class="content">
   <div class="options">
-<!--    ; trackBy: $.trackById-->
     <div
       class="option"
-      *for="let option of $.options$"
-      (mousedown)="() => $.onClickOption(option)"
-      [class.selected]="option.$selected$.subscribe"
-      [class.disabled]="option.disabled$"
+      *for="let option of $.optionsSet$"
+      (pointerdown)="() => $.$onPointerDownOption(option)"
     >
       <div class="label">
         {{ option.label$ }}
