--- a/src/examples/rx-dom/material/form/components/inputs/shared/input-field/style/mat-input-field.mixins.scss
+++ b/src/examples/rx-dom/material/form/components/inputs/shared/input-field/style/mat-input-field.mixins.scss
@@ -9,4 +9,8 @@
   color: $mat-input-field-color;
   background-color: transparent;
   text-overflow: ellipsis;
+
+  &:focus {
+    box-shadow: inset 0 0 0 1px $mat-input-field-border-color-focused;
+  }
 }
