--- a/src/examples/rx-dom/mail-client/app/main/main.component.html
+++ b/src/examples/rx-dom/mail-client/app/main/main.component.html
@@ -1,39 +1,58 @@
-<mat-sidenav-container
-  [opened]="$.sidenavOpened$"
-  [mode]="$.sidenavMode$"
-  [hasBackdrop]="$.sidenavHasBackdrop$"
-  (user-close)="$.onUserCloseSidenav"
->
-  <div sidenav>
-    <div class="header">
+<!--<mat-sidenav-container-->
+<!--  [opened]="$.sidenavOpened$"-->
+<!--  [mode]="$.sidenavMode$"-->
+<!--  [hasBackdrop]="$.sidenavHasBackdrop$"-->
+<!--  (user-close)="$.onUserCloseSidenav"-->
+<!--&gt;-->
+<!--  <div sidenav>-->
+<!--    <div class="header">-->
 
-    </div>
+<!--    </div>-->
 
-    <div class="body">
+<!--    <div class="body">-->
 
-    </div>
+<!--    </div>-->
 
-    <div class="footer">
+<!--    <div class="footer">-->
 
-    </div>
-  </div>
+<!--    </div>-->
+<!--  </div>-->
 
-  <div content>
-    <mat-toolbar-container>
-      <mat-toolbar>
-        <button
-          *if="$.menuButtonVisible$"
-          (click)="$.onClickMenuButton"
-        >
-          menu
-        </button>
-      </mat-toolbar>
-      <div content>
+<!--  <div content>-->
+<!--    <mat-toolbar-container>-->
+<!--      <mat-toolbar>-->
+<!--        <button-->
+<!--          *if="$.menuButtonVisible$"-->
+<!--          (click)="$.onClickMenuButton"-->
+<!--        >-->
+<!--          <mat-icon-menu></mat-icon-menu>-->
+<!--        </button>-->
+
+<!--&lt;!&ndash;        <mat-button>&ndash;&gt;-->
+<!--&lt;!&ndash;          <mat-icon-menu></mat-icon-menu>&ndash;&gt;-->
+<!--&lt;!&ndash;          <div>Menu</div>&ndash;&gt;-->
+<!--&lt;!&ndash;        </mat-button>&ndash;&gt;-->
+
+<!--&lt;!&ndash;        <mat-button>&ndash;&gt;-->
+<!--&lt;!&ndash;          <mat-ripple>&ndash;&gt;-->
+<!--&lt;!&ndash;            Menu&ndash;&gt;-->
+<!--&lt;!&ndash;          </mat-ripple>&ndash;&gt;-->
+<!--&lt;!&ndash;        </mat-button>&ndash;&gt;-->
+<!--&lt;!&ndash;        &ndash;&gt;-->
+<!--        <mat-button>-->
+<!--          Menu-->
+<!--        </mat-button>-->
+
+<!--      </mat-toolbar>-->
+<!--      <div content>-->
 <!--        content-->
-<!--        <mat-icon-ab-testing></mat-icon-ab-testing>-->
-        <mat-icons-demo></mat-icons-demo>
-      </div>
-    </mat-toolbar-container>
-  </div>
+<!--        &lt;!&ndash;        <mat-icons-demo></mat-icons-demo>&ndash;&gt;-->
+<!--      </div>-->
+<!--    </mat-toolbar-container>-->
+<!--  </div>-->
 
-</mat-sidenav-container>
+<!--</mat-sidenav-container>-->
+
+<mat-button>
+  Menu
+</mat-button>
